[gd_scene load_steps=22 format=3 uid="uid://dpg2hx6e52d3x"]

[ext_resource type="Script" path="res://Scripts/Enemy/Grunt.gd" id="1_kdtmy"]
[ext_resource type="Texture2D" uid="uid://c2ylw2s5ujq36" path="res://Assets/Kenney_Tiny_Dungeon/Tiles/tile_0088.png" id="2_0hjdc"]
[ext_resource type="Script" path="res://Scripts/Weapons/Weapons.gd" id="3_3pwlo"]
[ext_resource type="PackedScene" uid="uid://bul12e5w8nvfk" path="res://Scenes/Weapons/enemy_sword.tscn" id="4_p4qtn"]
[ext_resource type="Script" path="res://Scripts/States/StateGroup.gd" id="5_a6qoj"]
[ext_resource type="Script" path="res://Scripts/States/StateIdle.gd" id="5_rk38k"]
[ext_resource type="Script" path="res://Scripts/States/StateStaggered.gd" id="6_qlnsx"]
[ext_resource type="Script" path="res://Scripts/States/StateMoving.gd" id="9_ii8vo"]
[ext_resource type="Script" path="res://Scripts/States/StateWeaponAttack.gd" id="10_qfxsq"]
[ext_resource type="Script" path="res://Scripts/AI_States/AI_Wandering.gd" id="12_227sv"]
[ext_resource type="Script" path="res://Scripts/AI_States/AI_Approach.gd" id="13_8rgc6"]
[ext_resource type="Script" path="res://Scripts/AI_States/AI_AttackingAtAngle.gd" id="14_v7otw"]
[ext_resource type="Script" path="res://Scripts/Events/EventTakeKnockback.gd" id="16_3sdp7"]
[ext_resource type="Script" path="res://Scripts/Events/EventTakeDamage.gd" id="17_765t2"]
[ext_resource type="Script" path="res://Scripts/Events/EventTakeDeflect.gd" id="18_7677w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2631f"]
radius = 15.0

[sub_resource type="Animation" id="Animation_stusc"]
length = 0.001
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"set_active_hurtbox"
}]
}

[sub_resource type="Animation" id="Animation_n4tr0"]
resource_name = "idle"
length = 0.75
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_oec8n"]
resource_name = "moving"
length = 0.5
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.261799, -0.261799, 0.261799]
}

[sub_resource type="Animation" id="Animation_vp3k3"]
resource_name = "staggered"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.57079, 3.14159, 4.71238, 6.28318]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["enemy_hurt"],
"method": &"play_sound"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ghwc3"]
_data = {
"RESET": SubResource("Animation_stusc"),
"idle": SubResource("Animation_n4tr0"),
"moving": SubResource("Animation_oec8n"),
"staggered": SubResource("Animation_vp3k3")
}

[node name="Grunt" type="CharacterBody2D" node_paths=PackedStringArray("state_groups", "anim_player", "attack_audio_player", "weapons", "current_state")]
collision_layer = 2
script = ExtResource("1_kdtmy")
approach_distance_min = 30
approach_distance_max = 40
state_groups = [NodePath("States")]
base_movement_speed = 0.7
anim_player = NodePath("AnimationPlayer")
attack_audio_player = NodePath("AudioStreamPlayer2D")
weapons = NodePath("Weapons")
hitbox_layer = 2
hurtbox_mask = 3
current_state = NodePath("States/idle")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2631f")

[node name="sprite_offset" type="Node2D" parent="CollisionShape2D"]
position = Vector2(0, -1)

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D/sprite_offset"]
texture_filter = 1
texture_repeat = 1
texture = ExtResource("2_0hjdc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ghwc3")
}

[node name="Weapons" type="Node2D" parent="." node_paths=PackedStringArray("actor", "current_weapon", "weapons")]
script = ExtResource("3_3pwlo")
actor = NodePath("..")
current_weapon = NodePath("enemy_sword_root")
weapons = [NodePath("enemy_sword_root")]

[node name="enemy_sword_root" parent="Weapons" instance=ExtResource("4_p4qtn")]

[node name="States" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("5_a6qoj")
current_state = NodePath("idle")

[node name="idle" type="Node" parent="States"]
script = ExtResource("5_rk38k")

[node name="staggered" type="Node" parent="States"]
script = ExtResource("6_qlnsx")
state_time_max = 0.5

[node name="StateMoving" type="Node" parent="States"]
script = ExtResource("9_ii8vo")

[node name="StateWeaponAttack" type="Node" parent="States"]
script = ExtResource("10_qfxsq")

[node name="AI_States" type="Node" parent="."]

[node name="Wandering" type="Node" parent="AI_States"]
script = ExtResource("12_227sv")
state_time_max = 3.0

[node name="Approach" type="Node" parent="AI_States"]
script = ExtResource("13_8rgc6")

[node name="Attacking" type="Node" parent="AI_States"]
script = ExtResource("14_v7otw")
daring_to_attack_angle = 135

[node name="Events" type="Node" parent="."]

[node name="take_knockback" type="Node" parent="Events"]
script = ExtResource("16_3sdp7")

[node name="take_damage" type="Node" parent="Events"]
script = ExtResource("17_765t2")

[node name="take_deflect" type="Node" parent="Events"]
script = ExtResource("18_7677w")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
